# EmbeddedSystemsLab

./: README.md
src/: .gitignore  Makefile  control.c  control.h  filters.c  filters.h  imgui.ini  in4073.c  in4073.h  run  states.c  states.h
src/drivers/: comm_drone.c  logger.c  queue.c
src/drivers/config/: comm_drone.h  logger.h
src/fixedpoint/: fixedpoint.c  fixedpoint.h
src/gui_client/: CMakeLists.txt
src/gui_client/include/: background.hpp  client.hpp  control.hpp  gains.hpp  graphs.hpp  gui.hpp  imgui_wrapper.hpp  misc.hpp  protocol.hpp  state.hpp  window.hpp
src/gui_client/src/: background.cpp  client.cpp  control.cpp  gains.cpp  graphs.cpp  gui.cpp  imgui_wrapper.cpp  main.cpp  misc.cpp  protocol.cpp  state.cpp  window.cpp
src/invensense/: mpu_wrapper.c
src/pc_terminal/: Makefile  comm_terminal.c  comm_terminal.h  gui_server.c  gui_server.h  joystick.h  js.c  js.h  main.c  pc_terminal.c  pc_terminal.h  ping_timer.c  ping_timer.h  serial.c  serial.h  terminal.c  terminal.h  util.c  util.h
src/shared/: byte_queue.c  byte_queue.h  comm_protocol.c  comm_protocol.h  frame.c  frame.h  types.c  types.h  values.c  values.h
src/test/: Makefile  test_fixedpoint.c  test_flightmodes.c  test_main.c  test_main.h  test_pc_terminal.c  test_state_transitions.c
